implementata tutta Read (da testare!)